update the project structure to respect the grasp principles
 the goal of this modification is to remove useless class segregation and couple and data and processes which is the fondamental POO principle